# JArgsParser

./: CMakeLists.txt  README.md  README_zhCN.md  license
.github/workflows/: cmake.yml
doc/: user_guide.md  user_guide_zhCN.md
example/: CMakeLists.txt  act_arg.cpp  helloworld.cpp  pos_arg.cpp  show_all.cpp  val_arg.cpp
interface/: jargs_parser_api.h  jargs_parser_api.hpp
src/: jargs_parser_api.cpp  jargs_parser_api.hpp  jargs_parser_impl.cpp  jargs_parser_impl.h  main.cpp  transfer_utils.h
ut/: CMakeLists.txt  main.cpp
